Changelog for Yancy

{{ $NEXT }}

1.010     2018-10-24 19:19:28-05:00 America/Chicago

    [BREAKING]

    - The minimum Perl version that Yancy supports is now 5.14.
      Mojolicious says "Perl versions 5.10.x and 5.12.x are known to
      work very poorly with Mojolicious"
      (https://mojolicious.org/perldoc/Mojolicious/Guides/FAQ#Which-versions-of-Perl-are-supported-by-Mojolicious),
      and causes Yancy's tests to fail on 5.10. From this guidance,
      Yancy no longer supports these versions of Perl and will be at
      least Perl 5.14 going forward.

    [Fixed]

    - Upped dependency on Role::Tiny to version 2.000001 in accordance
      with Mojo::Base needing this version do actually do roles. Thanks
      @eserte and CPAN Testers for the report!
    - Fixed a missing `=back` in the documentation. Thanks @manwar and
      CPANTS for the report!
    - Fixed some unclear documentation for configuring the "properties"
      stash in Yancy::Controller::Yancy.

1.009     2018-10-21 20:48:42-05:00 America/Chicago

    [Added]

    - Added `schema` helper function to easily access the JSON schema
      for collections and properties.
    - Added Yancy::Plugin::Form::Bootstrap4. This plugin generates forms
      for the configured collections, making simple create/edit forms
      even easier.
    - Added first/last page links in the editor pagination bar. This
      makes it easier to get back to page 1 after browsing a few pages.
    - Added `inputmode` attribute to the editor form elements to provide
      better input choices to mobile devices.
    - Added `properties` option to the Yancy::Controller::Yancy `set`
      action and the `set` and `validate` helpers. This allows editing
      only a subset of the fields in an item. Previously, the entire
      item would need to be given to `set` to pass validation. Now we
      can update a single field and assume that the data already in the
      database passed validation when it was created.

    [Fixed]