@@ -128,7 +128,7 @@ allow_dirty_match = .*[.]PL
 ; throw innumerable warnings.
 perl = 5.014
 Mojolicious = 7.79 ; Fixed warning from Mojo::DOM::CSS
-Mojolicious::Plugin::OpenAPI = 1.28 ; Fixed deprecated placeholders
+Mojolicious::Plugin::OpenAPI = 2.01 ; Fixed not-found page
 Role::Tiny = 2.000001 ; Required for Mojolicious roles
 JSON::Validator = 2.05
 Sys::Hostname = 0
